==> lolitahouse/STM32-Learning-Project/13，SPI--读写串行FLASH/User/bsp_flash/bsp_spi_flash.c <==
#include "bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
  SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;	
	
	FLASH_SPI_APBxClock_FUN ( FLASH_SPI_CLK, ENABLE );																	/* 使能SPI时钟 */		
 	FLASH_SPI_CS_APBxClock_FUN ( FLASH_SPI_CS_CLK|FLASH_SPI_SCK_CLK|
																	FLASH_SPI_MISO_PIN|FLASH_SPI_MOSI_PIN, ENABLE );		/* 使能SPI引脚相关的时钟 */	
  
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_CS_PIN;																			/* 配置SPI的 CS引脚，普通IO即可 */
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(FLASH_SPI_CS_PORT, &GPIO_InitStructure);	
  
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_SCK_PIN;																		/* 配置SPI的 SCK引脚*/
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(FLASH_SPI_SCK_PORT, &GPIO_InitStructure);
  
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MISO_PIN;																		/* 配置SPI的 MISO引脚*/
  GPIO_Init(FLASH_SPI_MISO_PORT, &GPIO_InitStructure);
  
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MOSI_PIN;																		/* 配置SPI的 MOSI引脚*/
  GPIO_Init(FLASH_SPI_MOSI_PORT, &GPIO_InitStructure);
  
  SPI_FLASH_CS_HIGH();																																/* 停止信号 FLASH: CS引脚高电平*/
	
  /* SPI 模式配置 */
  // FLASH芯片 支持SPI模式0及模式3，据此设置CPOL CPHA
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(FLASH_SPIx , &SPI_InitStructure);  
  SPI_Cmd(FLASH_SPIx , ENABLE);																												/* 使能 SPI  */
	
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;  
  while (SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_TXE) == RESET)			/* 等待发送缓冲区为空，TXE事件 */
	{
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(0);
   }
  SPI_I2S_SendData(FLASH_SPIx , byte); 																			/* 写入数据寄存器，把要写入的数据写入发送缓冲区 */

	SPITimeout = SPIT_FLAG_TIMEOUT; 
  while (SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_RXNE) == RESET) 		/* 等待接收缓冲区非空，RXNE事件 */
  {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(1);
   }
 
  return SPI_I2S_ReceiveData(FLASH_SPIx ); 																	/* 读取数据寄存器，获取接收缓冲区数据 */
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;  
  while (SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_TXE) == RESET)			/* 等待发送缓冲区为空，TXE事件 */
	{
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(2);
  }	  
  SPI_I2S_SendData(FLASH_SPIx , HalfWord);																	/* 写入数据寄存器，把要写入的数据写入发送缓冲区 */

	SPITimeout = SPIT_FLAG_TIMEOUT;  
  while (SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_RXNE) == RESET)		/* 等待接收缓冲区非空，RXNE事件 */
	{
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(3);
  }
  
  return SPI_I2S_ReceiveData(FLASH_SPIx );																	/* 读取数据寄存器，获取接收缓冲区数据 */
}
